<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    android:paddingTop="10dp">

    <TextView
        android:id="@+id/tv_year_month"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray_bg"
        android:gravity="center_horizontal"
        android:padding="3dp"
        android:textColor="@color/deep_txt"
        android:textSize="@dimen/sp_14" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingTop="10dp">

        <TextView
            style="@style/calendar_week_item_style"
            android:text="@string/sunday" />

        <TextView
            style="@style/calendar_week_item_style"
            android:text="@string/monday" />

        <TextView
            style="@style/calendar_week_item_style"
            android:text="@string/tuesday" />

        <TextView
            style="@style/calendar_week_item_style"
            android:text="@string/wednesday" />

        <TextView
            style="@style/calendar_week_item_style"
            android:text="@string/thursday" />

        <TextView
            style="@style/calendar_week_item_style"
            android:text="@string/friday" />

        <TextView
            style="@style/calendar_week_item_style"
            android:text="@string/saturday" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:layout_marginBottom="20dp"
        android:background="@color/calendar_threeday_color" />

    <com.ruihuo.ixungen.calendarselector.NoScrollGridView
        android:id="@+id/gv_calendar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:cacheColorHint="@android:color/transparent"
        android:listSelector="@android:color/transparent"
        android:numColumns="7"
        android:scrollbars="none"
        android:stretchMode="columnWidth" />

</LinearLayout>